@@ -7,11 +7,22 @@
 #
 # [general]
 # verbose = false	# (bool) optional, be verbose
-# plugins = ""		# (list) optional, list of plugins to load
+# plugins = ""		# (DEPRECATED) (list) optional, list of plugins to load
 # plugin-path = ""	# (string) optional, additional path to plugins
 
 [general]
 verbose = false
+
+# Section plugins:
+#	Load plugins by name or by paths.
+#
+# [plugins]
+# abc =			# This will search for abc
+# ask = /tmp/ask.lua	# This use /tmp/ask.lua to load the plugin
+
+[plugins]
+history =
+ask =
 
 # Section identities:
 #	This describe identities, you can add any number you want
