@@ -645,10 +645,11 @@ will be rich, famous and so on.</p></div>
 <h2 id="_installation">Installation</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>The plugin <span class="monospaced">ask</span> is distributed with <span class="monospaced">irccd</span>. To enable it add the following to your
-<span class="monospaced">plugins</span> parameter:</p></div>
+<span class="monospaced">plugins</span> section:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>plugins = "ask"</pre>
+<pre>[plugins]
+ask =</pre>
 </div></div>
 </div>
 </div>
@@ -686,7 +687,7 @@ Maybe</tt></pre></div></div>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-09-21 14:46:51 CEST
+Last updated 2013-11-07 20:51:01 CET
 </div>
 </div>
 </body>
