@@ -657,10 +657,11 @@ asciidoc.install(2);
 <h2 id="_installation">Installation</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>The plugin <span class="monospaced">auth</span> is distributed with <span class="monospaced">irccd</span>. To enable it add the
-following to your <span class="monospaced">plugins</span> parameter:</p></div>
+following to your <span class="monospaced">plugins</span> section:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>plugins = "auth"</pre>
+<pre>[plugins]
+auth =</pre>
 </div></div>
 </div>
 </div>
@@ -725,7 +726,7 @@ http://www.gnu.org/software/src-highlite -->
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-10-10 19:04:17 CEST
+Last updated 2013-11-07 20:51:12 CET
 </div>
 </div>
 </body>
