@@ -644,10 +644,11 @@ asciidoc.install(2);
 <h2 id="_installation">Installation</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>The plugin <span class="monospaced">badwords</span> is distributed with <span class="monospaced">irccd</span>. To enable it add the
-following to your <span class="monospaced">plugins</span> parameter:</p></div>
+following to your <span class="monospaced">plugins</span> section:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>plugins = "badwords"</pre>
+<pre>[plugins]
+badwords =</pre>
 </div></div>
 </div>
 </div>
@@ -700,7 +701,7 @@ Justin Bieber</pre>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-09-21 14:46:51 CEST
+Last updated 2013-11-07 20:51:27 CET
 </div>
 </div>
 </body>
