@@ -645,10 +645,11 @@ is set from the server.</p></div>
 <h2 id="_installation">Installation</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>The plugin <span class="monospaced">date</span> is distributed with <span class="monospaced">irccd</span>. To enable it add the following to your
-<span class="monospaced">plugins</span> parameter:</p></div>
+<span class="monospaced">plugins</span> section:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>plugins = "date"</pre>
+<pre>[plugins]
+date =</pre>
 </div></div>
 </div>
 </div>
@@ -673,7 +674,7 @@ irccd: markand, 10:57</pre>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-10-30 19:51:52 CET
+Last updated 2013-11-07 20:51:40 CET
 </div>
 </div>
 </body>
