@@ -646,10 +646,11 @@ if possible.</p></div>
 <h2 id="_installation">Installation</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>The plugin <span class="monospaced">history</span> is distributed with <span class="monospaced">irccd</span>. To enable it add the following
-to your <span class="monospaced">plugins</span> parameter:</p></div>
+to your <span class="monospaced">plugins</span> section:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>plugins = "history"</pre>
+<pre>[plugins]
+history =</pre>
 </div></div>
 </div>
 </div>
@@ -706,7 +707,7 @@ http://www.gnu.org/software/src-highlite -->
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-09-21 14:46:51 CEST
+Last updated 2013-11-07 20:51:54 CET
 </div>
 </div>
 </body>
