@@ -692,10 +692,11 @@ User mode
 <h2 id="_installation">Installation</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>The plugin <span class="monospaced">logger</span> is distributed with <span class="monospaced">irccd</span>. To enable it add the following
-to your <span class="monospaced">plugins</span> parameter:</p></div>
+to your <span class="monospaced">plugins</span> section:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>plugins = "logger"</pre>
+<pre>[plugins]
+logger =</pre>
 </div></div>
 </div>
 </div>
@@ -763,7 +764,7 @@ sender nickname.</td>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-09-21 14:46:51 CEST
+Last updated 2013-11-07 20:52:16 CET
 </div>
 </div>
 </body>
