@@ -1044,7 +1044,7 @@ name           The plugin name.
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-10-30 19:51:52 CET
+Last updated 2013-11-06 22:10:12 CET
 </div>
 </div>
 </body>
