@@ -19,10 +19,11 @@ For the moment, `auth` supports the following backends:
 == Installation
 
 The plugin `auth` is distributed with `irccd`. To enable it add the
-following to your `plugins` parameter:
+following to your `plugins` section:
 
 ----
-plugins = "auth"
+[plugins]
+auth =
 ----
 
 == Usage
