@@ -9,11 +9,12 @@ CURRENT
   * Added new socket API for Lua,
   * Added support for server reconnection,
   * Added support for text formatting with colors and attributes,
-  * Added support for onMe (CTCP Action) event.
+  * Added support for onMe (CTCP Action) event,
+  * Added new way to load plugin by paths.
 
 1.0.2 November 1, 2013
 ---------------------------------------
-  * Errata, onMe event is not implemented.  
+  * Errata, onMe event is not implemented.
 
 1.0.2 November 1, 2013
 ---------------------------------------
